--- a/taxi_data_new.ipynb
+++ b/taxi_data_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "06c7c7cd-d912-4da2-8b8e-770b94443337",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "3db1a323-58a3-4cad-86b1-c3810b8a9b29",
    "metadata": {},
    "outputs": [
@@ -38,63 +38,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "d4441307-b298-480b-a7f0-ad44823f8ad6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxi_2011 = pq.read_table('yellow_tripdata_2011-07.parquet')\n",
-    "taxi_2011 = taxi_2011.to_pandas()\n",
+    "# taxi_2011 = pq.read_table('yellow_tripdata_2011-07.parquet')\n",
+    "# taxi_2011 = taxi_2011.to_pandas()\n",
     "\n",
-    "# Select necessary columns\n",
-    "taxi_2011 = taxi_2011[['tpep_pickup_datetime', 'tpep_dropoff_datetime', 'PULocationID', 'DOLocationID']]\n",
+    "# # Select necessary columns\n",
+    "# taxi_2011 = taxi_2011[['tpep_pickup_datetime', 'tpep_dropoff_datetime', 'PULocationID', 'DOLocationID']]\n",
     "\n",
-    "# Convert datetime column to proper format\n",
-    "taxi_2011['tpep_pickup_datetime'] = pd.to_datetime(taxi_2011['tpep_pickup_datetime'])\n",
-    "taxi_2011['tpep_dropoff_datetime'] = pd.to_datetime(taxi_2011['tpep_dropoff_datetime'])\n",
+    "# # Convert datetime column to proper format\n",
+    "# taxi_2011['tpep_pickup_datetime'] = pd.to_datetime(taxi_2011['tpep_pickup_datetime'])\n",
+    "# taxi_2011['tpep_dropoff_datetime'] = pd.to_datetime(taxi_2011['tpep_dropoff_datetime'])\n",
     "\n",
-    "# Filter for Manhattan zones\n",
-    "taxi_filtered_2011 = taxi_2011[\n",
-    "    (taxi_2011['PULocationID'].isin(manhattan_zone_numbers)) & \n",
-    "    (taxi_2011['DOLocationID'].isin(manhattan_zone_numbers))\n",
-    "]\n",
+    "# # Filter for Manhattan zones\n",
+    "# taxi_filtered_2011 = taxi_2011[\n",
+    "#     (taxi_2011['PULocationID'].isin(manhattan_zone_numbers)) & \n",
+    "#     (taxi_2011['DOLocationID'].isin(manhattan_zone_numbers))\n",
+    "# ]\n",
     "\n",
-    "# Filter for the first week of July (July 1–7, 2011)\n",
-    "start_date = '2011-07-01'\n",
-    "end_date = '2011-07-07'\n",
+    "# # Filter for the first week of July (July 1–7, 2011)\n",
+    "# start_date = '2011-07-01'\n",
+    "# end_date = '2011-07-07'\n",
     "\n",
-    "taxi_filtered_2011_week1 = taxi_filtered_2011[\n",
-    "    (taxi_filtered_2011['tpep_pickup_datetime'] >= start_date) & \n",
-    "    (taxi_filtered_2011['tpep_pickup_datetime'] <= end_date)\n",
-    "]\n",
+    "# taxi_filtered_2011_week1 = taxi_filtered_2011[\n",
+    "#     (taxi_filtered_2011['tpep_pickup_datetime'] >= start_date) & \n",
+    "#     (taxi_filtered_2011['tpep_pickup_datetime'] <= end_date)\n",
+    "# ]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "7e870d2b-68f6-410a-919b-ad820f8d262f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed and saved:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "    # Save filtered data as CSV\n",
-    "output_filename = f'yellow_tripdata_2011-07_filtered.csv'\n",
-    "taxi_filtered_2011.to_csv(output_filename, index=False)\n",
+    "#     # Save filtered data as CSV\n",
+    "# output_filename = f'yellow_tripdata_2011-07_filtered.csv'\n",
+    "# taxi_filtered_2011.to_csv(output_filename, index=False)\n",
     "\n",
-    "print(f\"Processed and saved:\" )"
+    "# print(f\"Processed and saved:\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "114219d9-30bf-4100-b84c-412464b02bfc",
    "metadata": {},
    "outputs": [
@@ -102,13 +94,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed and saved: 2021_new.parquet\n"
+      "Processed and saved: 2024_new.parquet\n"
      ]
     }
    ],
    "source": [
     "# Looped version for makeing the datasets\n",
-    "years = list(range(2021, 2022))\n",
+    "years = list(range(2024, 2025))\n",
     "\n",
     "# Loop through each year and process the Parquet file\n",
     "for year in years:\n",
@@ -121,8 +113,8 @@
     "    taxi_data = taxi_data[['tpep_pickup_datetime', 'tpep_dropoff_datetime', 'PULocationID', 'DOLocationID']]\n",
     "\n",
     "    # Convert datetime column to proper format\n",
-    "    taxi_data['tpep_pickup_datetime'] = pd.to_datetime(taxi_2011['tpep_pickup_datetime'])\n",
-    "    taxi_data['tpep_dropoff_datetime'] = pd.to_datetime(taxi_2011['tpep_dropoff_datetime'])\n",
+    "    taxi_data['tpep_pickup_datetime'] = pd.to_datetime(taxi_data['tpep_pickup_datetime'])\n",
+    "    taxi_data['tpep_dropoff_datetime'] = pd.to_datetime(taxi_data['tpep_dropoff_datetime'])\n",
     "\n",
     "    # Filter for Manhattan zones\n",
     "    taxi_data_filtered = taxi_data[\n",
